--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 				</div>
 
 				<div class="col-lg-5 col-sm-12">
-					<img src="img/me.jpg" alt="Rachel Brockman" id="me">
+					<img src="img/me.JPG" alt="Rachel Brockman" id="me">
 				</div>
 			</div>
 		</div>
