--- a/projects.html
+++ b/projects.html
@@ -257,7 +257,7 @@
                                 <div class="col-md-4 mb-3">
                                     <a href="https://devpost.com/software/maternamonitor?ref_content=my-projects-tab&ref_feature=my_projects"
                                         target="_blank" class="card">
-                                        <img class="img-fluid" alt="100%x280" src="img/materna.JPG">
+                                        <img class="img-fluid" alt="100%x280" src="img/materna.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">AthenaHacks: Materna Monitor</h4>
                                             <p class="card-text">A maternal health monitor that my team designed for USC
