--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<style>
 		#header {
-			background-image: url("img/beach.jpeg");
+			background-image: url("img/beach.JPEG");
 			height: calc(100vh - 66px);
 			background-size: cover;
 			background-position: center;
