--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 							in
 							industry, academia, and in my free time. During my time as an undergraduate, I held two
 							internship positions, competed in and organized several design competitions, and developed a
-							multiple of design projects in my classes and clubs.</p>
+							multitude of design projects in my classes and clubs.</p>
 						<p>My interests primarily lie in design and the intersection of mechanical systems, computers,
 							and
 							healthcare. I pride myself in being able to pick up new skills quickly and I'm always
