--- a/projects.html
+++ b/projects.html
@@ -107,6 +107,16 @@
     </style>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-08T6ZFC5D7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-08T6ZFC5D7');
+</script>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light navigate">
         <div class="container-fluid">
