--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Rachel Brockman, resume, Rachel Brockman resume, USC, mechanical engineer, mechanical engineer portfolio, biomedical engineer, biomedical engineer portfolio">
+    <meta name="keywords"
+        content="Rachel Brockman, resume, Rachel Brockman resume, USC, mechanical engineer, mechanical engineer portfolio, biomedical engineer, biomedical engineer portfolio">
     <title>Rachel Brockman | Projects</title>
     <link href="main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -110,18 +111,18 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-08T6ZFC5D7"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-08T6ZFC5D7');
+    gtag('config', 'G-08T6ZFC5D7');
 </script>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light navigate">
         <div class="container-fluid">
-            <a class="navbar-brand" id="logo" href="index.html"><img src="img/logo_color.png"
-                    class="logo" alt="RB Logo"></a>
+            <a class="navbar-brand" id="logo" href="index.html"><img src="img/logo_color.png" class="logo"
+                    alt="RB Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -174,19 +175,21 @@
                             <div class="row">
 
                                 <div class="col-md-4 mb-3">
-                                    <a href="https://drive.google.com/drive/folders/1SM-BaEJH0WY2Ug2eyr5m9-jaUJSygZZn?usp=share_link"
+                                    <a href="https://drive.google.com/drive/folders/1kA_iw3hEh2kQA3Zr7eSy0g8LtZuCCweq?usp=sharing"
                                         target="_blank" class="card">
-                                        <img class="img-fluid" alt="100%x280" src="img/sr_design.JPG">
+                                        <img class="img-fluid" alt="100%x280" src="img/coffee.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Next Level Grip: Senior Design Project</h4>
-                                            <p class="card-text">A grip strength rehabilitation device for stroke
-                                                survivors that I designed and prototyped for my senior design project.
-                                            </p>
+                                            <h4 class="card-title">Coffee Grinder Redesign</h4>
+                                            <p class="card-text">A semester long project for my advanced mechanical
+                                                design class that started with customer ethnography, which informed the
+                                                development of customer needs and functional decomposition. After
+                                                developing a few design variants, my group then developed a final
+                                                product.</p>
 
                                         </div>
-
                                     </a>
                                 </div>
+
                                 <div class="col-md-4 mb-3">
                                     <a href="https://drive.google.com/drive/folders/1bJ6Hd_0D9AZp4HBEAqHXDnyGXwn9aehJ?usp=sharing"
                                         target="_blank" class="card">
@@ -200,16 +203,19 @@
                                         </div>
                                     </a>
                                 </div>
+
                                 <div class="col-md-4 mb-3">
-                                    <a href="https://drive.google.com/file/d/1DHhhMLZ4RoZ2Kg5ZdnK7eStgiiwMEiZb/view?usp=sharing"
+                                    <a href="https://drive.google.com/drive/folders/1SM-BaEJH0WY2Ug2eyr5m9-jaUJSygZZn?usp=share_link"
                                         target="_blank" class="card">
-                                        <img class="img-fluid" alt="100%x280" src="img/dissection.JPG">
+                                        <img class="img-fluid" alt="100%x280" src="img/sr_design.JPG">
                                         <div class="card-body">
-                                            <h4 class="card-title">Burr Coffee Grinder Product Dissection</h4>
-                                            <p class="card-text">A teardown of a burr coffee grinder for my advanced
-                                                mechanical design class to inform my coffee grinder redesign.</p>
+                                            <h4 class="card-title">Next Level Grip: Senior Design Project</h4>
+                                            <p class="card-text">A grip strength rehabilitation device for stroke
+                                                survivors that I designed and prototyped for my senior design project.
+                                            </p>
 
                                         </div>
+
                                     </a>
                                 </div>
 
@@ -219,14 +225,14 @@
                             <div class="row">
 
                                 <div class="col-md-4 mb-3">
-                                    <a href="https://drive.google.com/file/d/1kB26mM7DaV6VH0vKAloWFY7jantiRc27/view?usp=sharing"
+                                    <a href="https://drive.google.com/drive/folders/11gobk2Rr1EOULS0e10P5lbFNRg9ttRgK?usp=sharing"
                                         target="_blank" class="card">
                                         <img class="img-fluid" alt="100%x280" src="img/dissection2.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Coffee and Spice Grinder Product Dissection</h4>
-                                            <p class="card-text">A follow up to the burr coffee grinder dissection
-                                                to further inform my coffee grinder redesign for my advanced
-                                                mechancial design class.</p>
+                                            <h4 class="card-title">Coffee Grinder Product Dissections</h4>
+                                            <p class="card-text">A teardown of a two different coffee grinders for my
+                                                advanced
+                                                mechanical design class to inform my coffee grinder redesign..</p>
 
                                         </div>
                                     </a>
