--- a/projects.html
+++ b/projects.html
@@ -198,7 +198,7 @@
                                             <h4 class="card-title">Hair Dryer DFMA Analysis</h4>
                                             <p class="card-text">For my DFMA class, I designed a hair dryer,
                                                 focusing on design for manufacturability and assembly and performed
-                                                a DFMA analysis fo the design.</p>
+                                                a DFMA analysis of the design.</p>
 
                                         </div>
                                     </a>
