--- a/projects.html
+++ b/projects.html
@@ -232,7 +232,7 @@
                                             <h4 class="card-title">Coffee Grinder Product Dissections</h4>
                                             <p class="card-text">A teardown of a two different coffee grinders for my
                                                 advanced
-                                                mechanical design class to inform my coffee grinder redesign..</p>
+                                                mechanical design class to inform my coffee grinder redesign.</p>
 
                                         </div>
                                     </a>
@@ -277,7 +277,7 @@
                                         <div class="card-body">
                                             <h4 class="card-title">AthenaHacks: Materna Monitor</h4>
                                             <p class="card-text">A maternal health monitor that my team designed for USC
-                                                AthenaHacks Hackathon 2022. We won best overall hack for our combined
+                                                AthenaHacks Hackathon 2022. We won the Hackathon's grand prize for our combined
                                                 hardware and software design.</p>
 
                                         </div>
