--- a/projects.html
+++ b/projects.html
@@ -243,9 +243,9 @@
                                         target="_blank" class="card">
                                         <img class="img-fluid" alt="100%x280" src="img/marble.JPG">
                                         <div class="card-body">
-                                            <h4 class="card-title">Marble Run Solidworks Design</h4>
+                                            <h4 class="card-title">Marble Run SolidWorks Design</h4>
                                             <p class="card-text">A marble run that I designed as the final project for
-                                                my Solidworks class.</p>
+                                                my SolidWorks class.</p>
 
                                         </div>
 
@@ -257,7 +257,7 @@
                                         <img class="img-fluid" alt="100%x280" src="img/inspecula.JPG">
                                         <div class="card-body">
                                             <h4 class="card-title">Inspecula Speculum Redesign</h4>
-                                            <p class="card-text">A speculum redesign that I did on a medical device
+                                            <p class="card-text">A speculum redesign that I worked on as a member of my undergraduate medical device
                                                 design team. The attached pitch deck was used in the finals of the
                                                 USC Viterbi MEPC pitch competition</p>
 
@@ -277,7 +277,7 @@
                                         <div class="card-body">
                                             <h4 class="card-title">AthenaHacks: Materna Monitor</h4>
                                             <p class="card-text">A maternal health monitor that my team designed for USC
-                                                AthenaHacks Hackathon 2022. We won the Hackathon's grand prize for our combined
+                                                AthenaHacks Hackathon 2022. We won the hackathon's grand prize for our combined
                                                 hardware and software design.</p>
 
                                         </div>
@@ -290,8 +290,8 @@
                                         <img class="img-fluid" alt="100%x280" src="img/handsani.JPG">
                                         <div class="card-body">
                                             <h4 class="card-title">Car Air Vent Hand Sanitizer Dispenser</h4>
-                                            <p class="card-text">A card air vent hand sanitizer dispenser that I
-                                                designed as the midterm project for my Solidworks class.</p>
+                                            <p class="card-text">A car air vent hand sanitizer dispenser that I
+                                                designed as the midterm project for my SolidWorks class.</p>
 
                                         </div>
                                     </a>
@@ -302,8 +302,8 @@
                                         <img class="img-fluid" alt="100%x280" src="img/davis.JPG">
                                         <div class="card-body">
                                             <h4 class="card-title">Butterfleye Eye Drop Aid</h4>
-                                            <p class="card-text">My team's design for an aid for dispensing eye
-                                                drops for the 2019 UC Davis Makeathon.</p>
+                                            <p class="card-text">My team's design for an eye
+                                                drop dispensing aid for the 2019 UC Davis Makeathon. We won the "Most Potential" award for our final product design and cost analysis.</p>
 
                                         </div>
 
