--- a/projects.html
+++ b/projects.html
@@ -40,12 +40,16 @@
             color: #374a67;
         }
 
-        @media (min-width: 992px) {
+        /* @media (min-width: 992px) { */
             .card {
-                height: 65vh !important;
+                /* min-height: 50vh;
+                max-height: 500px !important;
+                height: fit-content !important; */
+                padding-bottom: 100%;
+                margin-bottom: -100%;
             }
-        }
-
+        /* } */
+        
         .carousel-inner {
             padding: 1em;
         }
@@ -104,6 +108,10 @@
 
         .card-btn {
             width: 100%;
+        }
+
+        .card-text{
+            text-align: center;
         }
     </style>
 </head>
@@ -180,11 +188,12 @@
                                         <img class="img-fluid" alt="100%x280" src="img/coffee.png">
                                         <div class="card-body">
                                             <h4 class="card-title">Coffee Grinder Redesign</h4>
-                                            <p class="card-text">A semester long project for my advanced mechanical
+                                            <p class="card-text">AME 503: Advanced Mechanical Design</p>
+                                            <p class="card-text-body">A semester long project for my advanced mechanical
                                                 design class that started with customer ethnography, which informed the
                                                 development of customer needs and functional decomposition. After
                                                 developing a few design variants, my group then developed a final
-                                                product.</p>
+                                                product. I was responsible for initial customer ethnography, concept generation, and the CAD design of the device.</p>
 
                                         </div>
                                     </a>
@@ -196,10 +205,10 @@
                                         <img class="img-fluid" alt="100%x280" src="img/exploded.JPG">
                                         <div class="card-body">
                                             <h4 class="card-title">Hair Dryer DFMA Analysis</h4>
-                                            <p class="card-text">For my DFMA class, I designed a hair dryer,
+                                            <p class="card-text">AME 546: Design for Manufacturability and Assembly</p>
+                                            <p class="card-text-body">For my DFMA class, I designed a hair dryer,
                                                 focusing on design for manufacturability and assembly and performed
-                                                a DFMA analysis of the design.</p>
-
+                                                a DFMA analysis of the design. This was an individual project.</p>
                                         </div>
                                     </a>
                                 </div>
@@ -209,11 +218,11 @@
                                         target="_blank" class="card">
                                         <img class="img-fluid" alt="100%x280" src="img/sr_design.JPG">
                                         <div class="card-body">
-                                            <h4 class="card-title">Next Level Grip: Senior Design Project</h4>
-                                            <p class="card-text">A grip strength rehabilitation device for stroke
-                                                survivors that I designed and prototyped for my senior design project.
+                                            <h4 class="card-title">Next Level Grip: Stroke Grip Strength Rehab</h4>
+                                            <p class="card-text">BME 405: Senior Projects - Measurement and Instrumentation</p>
+                                            <p class="card-text-body">A grip strength rehabilitation device for stroke
+                                                survivors that I designed and prototyped for my senior design project. I was responsible for the CAD design of the device and the manufacturing and assembly of the device. 
                                             </p>
-
                                         </div>
 
                                     </a>
@@ -221,6 +230,54 @@
 
                             </div>
                         </div>
+
+                        <div class="carousel-item">
+                            <div class="row">
+
+                                <div class="col-md-4 mb-3">
+                                    <a href="https://drive.google.com/drive/folders/1UVshFQmA4l988LAk_bNTs3oQ2CH4rxaB?usp=drive_link"
+                                        target="_blank" class="card">
+                                        <img class="img-fluid" alt="100%x280" src="img/braille.jpg">
+                                        <div class="card-body">
+                                            <h4 class="card-title">Braille Buddy: Braille Phonics Toy</h4>
+                                            <p class="card-text">AME 504: Mechatronics Systems Design</p>
+                                            <p class="card-text-body">A mechatronic system to teach Braille phonics to visually impaired children. The device utilizes solenoids to actuate Braille letters and RFID readers and tags for individual letter recognition. I was responsible for the CAD design of the device and the development of software to make the solenoids actuate to create each letter of the Braille alphabet.</p>
+
+                                        </div>
+                                    </a>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <a href="https://drive.google.com/drive/folders/1WXDf6OoMekG3QkEgWkw0nEghjYkv6G_2?usp=drive_link"
+                                        target="_blank" class="card">
+                                        <img class="img-fluid" alt="100%x280" src="img/linear.jpg">
+                                        <div class="card-body">
+                                            <h4 class="card-title">Linear Motion Control System</h4>
+                                            <p class="card-text">AME 504: Mechatronics Systems Design</p>
+                                            <p class="card-text-body">A closed loop control system for a lead-screw mechanism to accurately and precisely mover an indicator in 1-inch increments. I utilized Hall-effect sensors and magnets to ensure that the indictator stayed within system boundaries and to establish the system's origin (i.e., the center point of the two Hall sensors). I designed the system in Solidworks, fabricated it, and programmed the system in the Arduino IDE. The system utilized a rotary encoder and motor driver IC to control rotation of a DC motor. This was an individual project.
+                                            </p>
+                                        </div>
+
+                                    </a>
+                                </div>
+                                <div class="col-md-4 mb-3">
+                                    <a href="https://drive.google.com/drive/folders/1nqwUm2rsW5GeHugezq12z_1qGpCVdKE9?usp=drive_link"
+                                        target="_blank" class="card">
+                                        <img class="img-fluid" alt="100%x280" src="img/dissection3.jpg">
+                                        <div class="card-body">
+                                            <h4 class="card-title">Keurig Product Dissection</h4>
+                                            <p class="card-text">AME 504: Mechatronics Systems Design</p>
+                                            <p class="card-text-body">
+                                                A comprehensive dissection of a Keurig K-Elite coffee machine to understand the mechanical, electrical, and software components of the device. I was responsible for researching the fluid path systems of the device.
+                                            </p>
+                                        </div>
+                                    </a>
+                                </div>
+
+
+                            </div>
+                        </div>
+
                         <div class="carousel-item">
                             <div class="row">
 
@@ -230,9 +287,11 @@
                                         <img class="img-fluid" alt="100%x280" src="img/dissection2.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Coffee Grinder Product Dissections</h4>
-                                            <p class="card-text">A teardown of a two different coffee grinders for my
+                                            <p class="card-text">AME 503: Advanced Mechanical Design</p>
+                                            <p class="card-text-body">A teardown of a two different coffee grinders for my
                                                 advanced
-                                                mechanical design class to inform my coffee grinder redesign.</p>
+                                                mechanical design class to inform my coffee grinder redesign. These were individual projects.
+                                            </p>
 
                                         </div>
                                     </a>
@@ -244,9 +303,10 @@
                                         <img class="img-fluid" alt="100%x280" src="img/marble.JPG">
                                         <div class="card-body">
                                             <h4 class="card-title">Marble Run SolidWorks Design</h4>
-                                            <p class="card-text">A marble run that I designed as the final project for
-                                                my SolidWorks class.</p>
-
+                                            <p class="card-text">ITP 308: CAD for Biomechanical Systems</p>
+                                            <p class="card-text-body">A marble run that I designed as the final project for
+                                                my SolidWorks class. This was an individual project.
+                                            </p>
                                         </div>
 
                                     </a>
@@ -257,10 +317,11 @@
                                         <img class="img-fluid" alt="100%x280" src="img/inspecula.JPG">
                                         <div class="card-body">
                                             <h4 class="card-title">Inspecula Speculum Redesign</h4>
-                                            <p class="card-text">A speculum redesign that I worked on as a member of my undergraduate medical device
+                                            <p class="card-text">MEDesign Medical Device Design Team</p>
+                                            <p class="card-text-body">A speculum redesign that I worked on as a member of my undergraduate medical device
                                                 design team. The attached pitch deck was used in the finals of the
-                                                USC Viterbi MEPC pitch competition</p>
-
+                                                USC Viterbi MEPC pitch competition. I was responsible for the CAD design of the device and coordinated meetings with physicians and industry professionals to inform the design of the device.
+                                            </p>
                                         </div>
                                     </a>
                                 </div>
@@ -275,11 +336,12 @@
                                         target="_blank" class="card">
                                         <img class="img-fluid" alt="100%x280" src="img/materna.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">AthenaHacks: Materna Monitor</h4>
-                                            <p class="card-text">A maternal health monitor that my team designed for USC
+                                            <h4 class="card-title">Materna Monitor</h4>
+                                            <p class="card-text">AthenaHacks Hackathon 2022</p>
+                                             <p class="card-text-body">A maternal health monitor that my team designed for USC
                                                 AthenaHacks Hackathon 2022. We won the hackathon's grand prize for our combined
-                                                hardware and software design.</p>
-
+                                                hardware and software design. I was responsible for our website design and the integration of Twilio into our device.
+                                            </p>
                                         </div>
 
                                     </a>
@@ -290,9 +352,10 @@
                                         <img class="img-fluid" alt="100%x280" src="img/handsani.JPG">
                                         <div class="card-body">
                                             <h4 class="card-title">Car Air Vent Hand Sanitizer Dispenser</h4>
-                                            <p class="card-text">A car air vent hand sanitizer dispenser that I
-                                                designed as the midterm project for my SolidWorks class.</p>
-
+                                            <p class="card-text">ITP 308: CAD for Biomechanical Systems</p>
+                                            <p class="card-text-body">A car air vent hand sanitizer dispenser that I
+                                                designed as the midterm project for my SolidWorks class. This was an individual project.
+                                            </p>
                                         </div>
                                     </a>
                                 </div>
@@ -302,9 +365,10 @@
                                         <img class="img-fluid" alt="100%x280" src="img/davis.JPG">
                                         <div class="card-body">
                                             <h4 class="card-title">Butterfleye Eye Drop Aid</h4>
-                                            <p class="card-text">My team's design for an eye
-                                                drop dispensing aid for the 2019 UC Davis Makeathon. We won the "Most Potential" award for our final product design and cost analysis.</p>
-
+                                            <p class="card-text">UC Davis Makeathon 2019</p>
+                                            <p class="card-text-body">My team's design for an eye
+                                                drop dispensing aid for the 2019 UC Davis Makeathon. We won the "Most Potential" award for our final product design and cost analysis. I was responsible for concept generation and cost analysis for the device.
+                                            </p>
                                         </div>
 
                                     </a>
